--- a/basic_ideal.ipynb
+++ b/basic_ideal.ipynb
@@ -165,7 +165,7 @@
     "import gate\n",
     "\n",
     "for thetas in np.linspace(0, 0.5, 10000):\n",
-    "    a = (gate.gate1['Rx'](thetas) @ gate.gate1['X'])\n",
+    "    a = (gate.gate['Rx'](thetas) @ gate.gate['X'])\n",
     "    #print(a)"
    ]
   },
