--- a/tensor.ipynb
+++ b/tensor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "init = [1, 0, 0, 0]\n",
-    "print(gate.gate2['CX'] @ (np.kron(gate.gate1['H'],gate.gate1['I']) @ init))"
+    "print(gate.gate['CX'] @ (np.kron(gate.gate['H'],gate.gate['I']) @ init))"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "for i in range(0, 10):\n",
-    "    k = np.kron(gate.gate1['I'],gate.gate1['H'])\n"
+    "    k = np.kron(gate.gate['I'],gate.gate['H'])\n"
    ]
   },
   {
@@ -39,242 +39,89 @@
    "outputs": [],
    "source": [
     "for i in range(0, 1000000):\n",
-    "    k = gate.gate2['IH']"
+    "    k = gate.gate['IH']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def kron_A_I(A, N):\n",
-    "    out = np.zeros((N*N, N*N),dtype=A.dtype)\n",
-    "    for i in range(N):\n",
-    "        for j in range(N):\n",
-    "            value = A[i,j]\n",
-    "            out[i*2: i*2 + 2,j*2:j*2 + 2] = np.array([[value, 0], [0, value]])\n",
-    "    return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.08438087 0.41107181 0.04538587 0.95188399]\n",
-      " [0.1705832  0.77136947 0.69109793 0.58784028]\n",
-      " [0.29480806 0.77784422 0.59064393 0.70858758]\n",
-      " [0.11067381 0.13596001 0.74064147 0.29661303]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = np.random.rand(4, 4)\n",
-    "print(A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.         0.34270731 0.         0.84177329 0.         0.58071937]\n",
-      " [0.34270731 0.         0.84177329 0.         0.58071937 0.        ]\n",
-      " [0.         0.89888455 0.         0.51334885 0.         0.28378635]\n",
-      " [0.89888455 0.         0.51334885 0.         0.28378635 0.        ]\n",
-      " [0.         0.64201619 0.         0.64069361 0.         0.25695429]\n",
-      " [0.64201619 0.         0.64069361 0.         0.25695429 0.        ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def kron_A_X(A):\n",
-    "    N = A.shape[0]\n",
-    "    out = np.zeros((N*2, N*2),dtype=A.dtype)\n",
-    "    for i in range(N):\n",
-    "        for j in range(N):\n",
-    "            value = A[i,j]\n",
-    "            out[i*2: i*2 + 2,j*2:j*2 + 2] = np.array([[0, value], [value, 0]])\n",
-    "    return out\n",
-    "\n",
-    "\n",
-    "A = np.random.rand(3, 3)\n",
-    "result = kron_A_X(A)\n",
-    "print(result)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(np.kron(A, np.array([[0, 1], [1, 0]])), result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.random.rand(300, 300)\n",
+    "A = np.random.rand(2**15, 2**15)\n",
     "A = A.astype(np.complex128)\n",
     "B = np.array([[1,1],[1,1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1000):\n",
-    "    k = np.kron(A, gate.gate2['CRZ'](np.pi/4))"
+    "for i in range(1):\n",
+    "    k = np.kron(A, np.array([[0,0],[0,1]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A @ A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2097152, 80)\n"
+     ]
     }
    ],
    "source": [
-    "np.allclose(k1, k)"
+    "import tensor\n",
+    "k1 = tensor.ARY(A, 1)\n",
+    "print(k1.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 2. 0. 3.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 4. 0. 5. 0. 6.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 7. 0. 8. 0. 9.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(1000):\n",
-    "    k1 = ACRZ(A, np.pi/4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ACRX(A, theta):\n",
-    "    cos_theta_2_times_A = np.cos(theta / 2) * A\n",
-    "    sin_theta_2_times_A = -1j * np.sin(theta / 2) * A\n",
-    "    m, n = A.shape\n",
-    "    out = np.zeros((m, 4, n, 4), dtype=complex)\n",
-    "    out[:, 0, :, 0] = A\n",
-    "    out[:, 1, :, 1] = A\n",
-    "    out[:, 2, :, 2] = cos_theta_2_times_A\n",
-    "    out[:, 2, :, 3] = sin_theta_2_times_A\n",
-    "    out[:, 3, :, 2] = sin_theta_2_times_A\n",
-    "    out[:, 3, :, 3] = cos_theta_2_times_A\n",
-    "    out.shape = (4 * m, 4 * n)\n",
-    "    return out\n",
+    "import numpy as np\n",
     "\n",
-    "def CRXA(A, theta):\n",
-    "    cos_theta_2_times_A = np.cos(theta / 2) * A\n",
-    "    sin_theta_2_times_A = -1j * np.sin(theta / 2) * A\n",
-    "    m, n = A.shape\n",
-    "    out = np.zeros((4, m, 4, n), dtype=complex)\n",
-    "    out[0, :, 0, :] = A\n",
-    "    out[1, :, 1, :] = A\n",
-    "    out[2, :, 2, :] = cos_theta_2_times_A\n",
-    "    out[2, :, 3, :] = sin_theta_2_times_A\n",
-    "    out[3, :, 2, :] = sin_theta_2_times_A\n",
-    "    out[3, :, 3, :] = cos_theta_2_times_A\n",
-    "    out.shape = (4 * m, 4 * n)\n",
-    "    return out\n",
+    "def AP3(A):\n",
+    "    rows, cols = A.shape\n",
+    "    kron_result = np.zeros((2 * rows, 2 * cols))\n",
+    "    kron_result[1::2, 1::2] = A\n",
+    "    return kron_result\n",
     "\n",
-    "def ACRY(A, theta):\n",
-    "    cos_theta_2_times_A = np.cos(theta / 2) * A\n",
-    "    sin_theta_2_times_A = np.sin(theta / 2) * A\n",
-    "\n",
-    "    m, n = A.shape\n",
-    "    out = np.zeros((m, 4, n, 4), dtype=complex)\n",
-    "    \n",
-    "    out[:, 0, :, 0] = A\n",
-    "    out[:, 1, :, 1] = A\n",
-    "    out[:, 2, :, 2] = cos_theta_2_times_A\n",
-    "    out[:, 2, :, 3] = -sin_theta_2_times_A\n",
-    "    out[:, 3, :, 2] = sin_theta_2_times_A\n",
-    "    out[:, 3, :, 3] = cos_theta_2_times_A\n",
-    "    \n",
-    "    out.shape = (4 * m, 4 * n)\n",
-    "    return out\n",
-    "\n",
-    "def CRYA(A, theta):\n",
-    "    cos_theta_2_times_A = np.cos(theta / 2) * A\n",
-    "    sin_theta_2_times_A = np.sin(theta / 2) * A\n",
-    "\n",
-    "    m, n = A.shape\n",
-    "    out = np.zeros((4, m, 4, n), dtype=complex)\n",
-    "    \n",
-    "    out[0, :, 0, :] = A\n",
-    "    out[1, :, 1, :] = A\n",
-    "    out[2, :, 2, :] = cos_theta_2_times_A\n",
-    "    out[2, :, 3, :] = -sin_theta_2_times_A\n",
-    "    out[3, :, 2, :] = sin_theta_2_times_A\n",
-    "    out[3, :, 3, :] = cos_theta_2_times_A\n",
-    "    \n",
-    "    out.shape = (4 * m, 4 * n)\n",
-    "    return out\n",
-    "\n",
-    "\n",
-    "def CRZA(A, theta):\n",
-    "    phase = 1j * theta / 2\n",
-    "    m, n = A.shape\n",
-    "    out = np.zeros((4, m, 4, n), dtype=complex)\n",
-    "    out[0, :, 0, :] = A\n",
-    "    out[1, :, 1, :] = A\n",
-    "    out[2, :, 2, :] = np.exp(-phase) * A\n",
-    "    out[3, :, 3, :] = np.exp(phase) * A\n",
-    "    out.shape = (4 * m, 4 * n)\n",
-    "    return out\n",
-    "\n",
-    "def ACRZ(A, theta):\n",
-    "    phase = 1j * theta / 2\n",
-    "    m, n = A.shape\n",
-    "    out = np.zeros((m, 4, n, 4), dtype=complex)\n",
-    "    out[:, 0, :, 0] = A\n",
-    "    out[:, 1, :, 1] = A\n",
-    "    out[:, 2, :, 2] = np.exp(-phase) * A\n",
-    "    out[:, 3, :, 3] = np.exp(phase) * A\n",
-    "    out.shape = (4 * m, 4 * n)\n",
-    "    return out\n"
+    "# Example usage\n",
+    "A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "result = AP3(A)\n",
+    "print(result)\n"
    ]
   }
  ],
