Add qasm to Gates

--- a/entry.ipynb
+++ b/entry.ipynb
@@ -15,17 +15,66 @@
    ],
    "source": [
     "import constant, tensor, gate, utilities\n",
-    "import numpy as np, qiskit\n",
+    "import numpy as np, qiskit, re\n",
     "\n",
-    "def circuit_to_gates(qc: qiskit.QuantumCircuit):\n",
+    "def qasm_to_qasmgates(qasm):\n",
+    "    gates = qasm.split('\\n')[3:-1]\n",
+    "    qasm_gates = []\n",
+    "    for gate in gates:\n",
+    "        gate = gate[:-1].split(' ')\n",
+    "        # print(gate)\n",
+    "        indices = re.findall(r'\\d+', gate[1])\n",
+    "        indices = [int(index) for index in indices]\n",
+    "        matches = re.match(r'([a-z]+)(\\(\\d+\\.\\d+\\))?', gate[0])\n",
+    "        # Extract the function name and value from the matches\n",
+    "        name = matches.group(1).upper()\n",
+    "        if matches.group(2) is None:\n",
+    "            param = 0\n",
+    "        else:\n",
+    "            param = float(matches.group(2)[1:-1])\n",
+    "        qasm_gates.append((name, param, indices))\n",
+    "    return qasm_gates\n",
+    "\n",
+    "def qasmgates_to_qcs(gates: list) -> list[qiskit.QuantumCircuit]: \n",
+    "    qcs = []\n",
+    "    sub_qc = []\n",
+    "    counter = 0\n",
+    "    active_2qubit = 0 # 0 mean dactive, 1 mean active, 2 mean break instruction\n",
+    "    num_qubits = max(max(gates, key=lambda x: max(x[2]))[2]) + 1\n",
+    "    print(num_qubits)\n",
+    "    slots = np.zeros(num_qubits)\n",
+    "    for name, param, indices in gates: \n",
+    "        if len(indices) == 2:\n",
+    "            active_2qubit += 1\n",
+    "        \n",
+    "        slots = utilities.update_slot(slots, indices)\n",
+    "        if any(slot > 1 for slot in slots) or active_2qubit == 2:\n",
+    "            qcs.append(sub_qc)\n",
+    "            active_2qubit = 0\n",
+    "            sub_qc = []\n",
+    "            sub_qc.append((name, param, indices))\n",
+    "            if len(indices) == 2:\n",
+    "                active_2qubit += 1\n",
+    "            slots = np.zeros(num_qubits)\n",
+    "            slots = utilities.update_slot(slots, indices)\n",
+    "            gates = gates[counter + 1:]\n",
+    "            counter = 0\n",
+    "        else:\n",
+    "            sub_qc.append((name, param, indices))\n",
+    "            counter += 1\n",
+    "            if counter >= len(gates):\n",
+    "                qcs.append(sub_qc)\n",
+    "                return qcs\n",
+    "    return qcs\n",
+    "\n",
+    "\n",
+    "def qasmgates_to_gates(qasmgates: list[str]):\n",
     "    gates = []\n",
-    "    for instr, qargs, _ in qc.data:\n",
-    "        qubit_indices = [q.index for q in qargs]\n",
-    "        name = instr.name.upper()\n",
-    "        gates.append(gate.Gate(name[1:] if name[0] == 'C' else name, indices = qubit_indices, param = np.squeeze(instr.params)))\n",
+    "    for name, param, indices in qasmgates: \n",
+    "        gates.append(gate.Gate(name, indices = indices, param = param))\n",
     "    return gates\n",
     "    \n",
-    "def gates_to_string(gates: list[qiskit.QuantumCircuit], num_qubits: int) -> np.ndarray:\n",
+    "def gates_to_string(gates: list[gate.Gate], num_qubits: int) -> np.ndarray:\n",
     "    \"\"\"Return the matrix representation of a circuit composed of a list of gates acting on `num_qubits` qubits.\n",
     "\n",
     "    Args:\n",
@@ -131,15 +180,6 @@
     "qc = ansatz.Walltoall_zxz(4, 200)\n",
     "qc = qc.assign_parameters([1] * qc.num_parameters)\n",
     "state = qi.Statevector.from_instruction(qc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qcs = splitter.split_control(qc.copy())"
    ]
   },
   {
