--- a/tensor.ipynb
+++ b/tensor.ipynb
@@ -4,22 +4,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.70710678+0.j 0.        +0.j 0.        +0.j 0.70710678+0.j]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import gate\n",
+    "import qimax.gate\n",
     "import numpy as np\n",
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "init = [1, 0, 0, 0]\n",
-    "print(gate.gate['CX'] @ (np.kron(gate.gate['H'],gate.gate['I']) @ init))"
+    "%autoreload 2"
    ]
   },
   {
@@ -44,20 +34,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.random.rand(2**15, 2**15)\n",
-    "A = A.astype(np.complex128)\n",
-    "B = np.array([[1,1],[1,1]])"
+    "A = np.random.uniform(0,2*np.pi,(2**15, 2**15))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([102899.83947437, 102570.91444041, 102992.24811631, ...,\n",
+       "       103653.72500952, 103321.13151543, 102951.52620608])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A @ np.ones(2**15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "for i in range(1):\n",
     "    k = np.kron(A, np.array([[0,0],[0,1]]))"
