For testing mm type

--- a/entry.ipynb
+++ b/entry.ipynb
@@ -39,9 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.providers.basicaer import QasmSimulatorPy\n",
-    "backend = QasmSimulatorPy()\n",
-    "qc_basis = qiskit.transpile(qc, backend, optimization_level = 1,\n",
+    "qc_basis = qiskit.transpile(qc,\n",
     "    basis_gates=['h', 'cx',\n",
     "                'rx','ry','rz',\n",
     "                'crx','cry','crz'])\n",
