--- a/tensor.ipynb
+++ b/tensor.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import qimax.gate\n",
+    "from qimax import gate\n",
     "import numpy as np\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -14,12 +14,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(0, 10):\n",
-    "    k = np.kron(gate.gate['I'],gate.gate['H'])\n"
+    "import random\n",
+    "from qimax import gate\n",
+    "k = 4\n",
+    "gate_list = ['I', 'H', 'S', 'CX', 'RX', 'RY', 'RZ']\n",
+    "gates = random.choices(gate_list, k=k)\n",
+    "tensor_input_forms = []\n",
+    "tensor_string_forms = []\n",
+    "index = 0\n",
+    "if gates[0] in ['RX', 'RY', 'RZ']:\n",
+    "    phase = random.uniform(0, 2*np.pi)\n",
+    "    tensor = gate.gate[gates[0]](phase)\n",
+    "    tensor_input_forms.append(f\"{gates[0]} {phase} {index}\")\n",
+    "    index += 1\n",
+    "else:\n",
+    "    tensor = gate.gate[gates[0]]\n",
+    "    if gates[0] == 'CX':\n",
+    "        tensor_input_forms.append(f\"{gates[0]} {index} {index+1}\")\n",
+    "        index += 2\n",
+    "    else:\n",
+    "        tensor_input_forms.append(f\"{gates[0]} {index}\")\n",
+    "        index += 1\n",
+    "for gate1 in gates:\n",
+    "    if gate1 in ['RX', 'RY', 'RZ']:\n",
+    "        phase = random.uniform(0, 2*np.pi)\n",
+    "        tensor = np.kron(tensor, gate.gate[gate1](\n",
+    "            phase))\n",
+    "        tensor_input_forms.append(f\"{gate1} {phase} {index}\")\n",
+    "        index += 1\n",
+    "    else:\n",
+    "        tensor = np.kron(tensor, gate.gate[gate1])\n",
+    "        if gate1 == 'CX':\n",
+    "            tensor_input_forms.append(f\"{gate1} {index} {index+1}\")\n",
+    "            index += 2\n",
+    "        else:\n",
+    "            tensor_input_forms.append(f\"{gate1} {index}\")\n",
+    "            index += 1\n",
+    "for i in range(tensor.shape[0]):\n",
+    "    for j in range(tensor.shape[1]):\n",
+    "        tensor_string_forms.append(f\"{i} | {j} | {tensor[i,j]}\")\n",
+    "np.savetxt(f'./data_hardware/tensor/in_{k}.txt', tensor_input_forms, fmt='%s')\n",
+    "np.savetxt(\n",
+    "    f'./data_hardware/tensor/out_{k}.txt', tensor_string_forms, fmt='%s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          ┌───┐     \n",
+      "q_0: ──■──┤ X ├──■──\n",
+      "     ┌─┴─┐└─┬─┘┌─┴─┐\n",
+      "q_1: ┤ X ├──■──┤ X ├\n",
+      "     └───┘     └───┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qiskit import QuantumCircuit, transpile\n",
+    "from qiskit.circuit.library import RZGate\n",
+    "\n",
+    "# Create a quantum circuit\n",
+    "qc = QuantumCircuit(2)\n",
+    "qc.swap(0,1)\n",
+    "\n",
+    "# Transpile the circuit\n",
+    "transpiled_circuit = transpile(qc, basis_gates=['h','s','cx','rx','ry','rz'])\n",
+    "\n",
+    "# Print the transpiled circuit\n",
+    "print(transpiled_circuit)"
    ]
   },
   {
@@ -38,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.random.uniform(0,2*np.pi,(2**15, 2**15))"
+    "A = np.random.uniform(0, 2*np.pi, (2**15, 2**15))"
    ]
   },
   {
@@ -81,7 +153,7 @@
    ],
    "source": [
     "for i in range(1):\n",
-    "    k = np.kron(A, np.array([[0,0],[0,1]]))"
+    "    k = np.kron(A, np.array([[0, 0], [0, 1]]))"
    ]
   },
   {
@@ -133,16 +205,18 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "\n",
     "def AP3(A):\n",
     "    rows, cols = A.shape\n",
     "    kron_result = np.zeros((2 * rows, 2 * cols))\n",
     "    kron_result[1::2, 1::2] = A\n",
     "    return kron_result\n",
     "\n",
+    "\n",
     "# Example usage\n",
     "A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
     "result = AP3(A)\n",
-    "print(result)\n"
+    "print(result)"
    ]
   }
  ],
@@ -162,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
