--- a/generate_file_for_hardware.ipynb
+++ b/generate_file_for_hardware.ipynb
@@ -2,31 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rz(0.3) q[0];\n",
-      "cx q[0],q[1];\n",
-      "h q[2];\n",
-      "h q[0];\n",
-      "rx(0.5) q[1];\n",
-      "h q[2];\n",
-      "xxxx\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "---\n",
       "[('RZ', 0.3, [0])]\n",
-      "xxxx\n",
-      "[('X', -999, [0, 1]), ('H', -999, [2])]\n",
-      "xxxx\n",
-      "[('H', -999, [0]), ('RX', 0.5, [1]), ('H', -999, [2])]\n"
+      "---\n",
+      "[('RZ', 0.4, [1])]\n",
+      "---\n",
+      "[('CX', -999, [0, 1]), ('H', -999, [2])]\n",
+      "---\n",
+      "[('H', -999, [0]), ('RX', 0.5, [1]), ('H', -999, [2])]\n",
+      "---\n",
+      "[('CX', -999, [0, 1])]\n",
+      "---\n",
+      "[('RZ', 0.5, [0]), ('H', -999, [2])]\n",
+      "[('RZ', 0.3, [0]), ['I', -999, [1]], ['I', -999, [2]]]\n",
+      "[['I', -999, [0]], ('RZ', 0.4, [1]), ['I', -999, [2]]]\n",
+      "[['I', -999, [0]], ['I', -999, [1]], ('H', -999, [2])]\n",
+      "[('H', -999, [0]), ('RX', 0.5, [1]), ('H', -999, [2])]\n",
+      "[['I', -999, [0]], ['I', -999, [1]], ['I', -999, [2]]]\n",
+      "[('RZ', 0.5, [0]), ['I', -999, [1]], ('H', -999, [2])]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "gate = {\n",
     "    \"I\": np.array([[1, 0], [0, 1]], dtype=np.complex128),\n",
     "    \"RX\": lambda theta: np.array(\n",
@@ -54,40 +63,94 @@
     "num_qubits = 3\n",
     "qc = qiskit.QuantumCircuit(num_qubits)\n",
     "qc.rz(0.3, 0)\n",
+    "qc.rz(0.4, 1)\n",
     "qc.cx(0, 1)\n",
     "qc.h(2)\n",
     "qc.h(0)\n",
     "qc.rx(0.5, 1)\n",
     "qc.h(2)\n",
     "qc.cx(0, 1)\n",
+    "qc.rz(0.5, 0)\n",
+    "qc.h(2)\n",
     "from qimax import converter, circuit, splitter\n",
     "num_qubits = qc.num_qubits\n",
     "matrices = []\n",
     "Us: list[circuit.U] = []\n",
     "Usm = [] # [U_{0:m-1}, U_{1:m-1}, ... U_{m-1:m-1}]\n",
     "index = 0\n",
-    "qasm_gates = converter.qasm_to_qasmgates(converter.qc_to_qasm(qc))\n",
-    "qcs = splitter.qasmgates_to_qcs2(qasm_gates)\n",
-    "for qc in qcs:\n",
-    "    print('xxxx')\n",
-    "    print(qc)"
+    "\n",
+    "\n",
+    "qasm_gates = converter.parse_qasm(converter.qc_to_qasm(qc))\n",
+    "Us = splitter.qasmgates_to_qcs2(qasm_gates)\n",
+    "\n",
+    "gatess = [[0 for _ in range(num_qubits)] for _ in range(len(Us))]\n",
+    "for index, u in enumerate(Us):\n",
+    "    slots = np.ones(num_qubits)\n",
+    "    print('---')\n",
+    "    print(u)\n",
+    "    for gate in u:\n",
+    "        if gate[0] == 'CX':\n",
+    "            gatess[index][0] = ('CX', gate[1], gate[2])\n",
+    "        else:\n",
+    "            slots[gate[2]] = 0\n",
+    "            gatess[index][gate[2][0]] = (gate[0], gate[1], gate[2])\n",
+    "    for j, is_active in enumerate(slots):\n",
+    "        if is_active:\n",
+    "            gatess[index][j] = (['I', -999, [j]])\n",
+    "            \n",
+    "for u in gatess:\n",
+    "    print(u)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('RZ', 0.3, [0]),\n",
+       " ('CX', -999, [0, 1]),\n",
+       " ('H', -999, [2]),\n",
+       " ('H', -999, [0]),\n",
+       " ('RX', 0.5, [1]),\n",
+       " ('H', -999, [2]),\n",
+       " ('CX', -999, [0, 1]),\n",
+       " ('RZ', 0.5, [0]),\n",
+       " ('H', -999, [2])]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qasm_gates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RZ\n",
-      "X\n",
-      "H\n",
-      "H\n",
-      "RX\n",
-      "H\n"
+      "RZ\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "tuple indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[62], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m gate1[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRZ\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[0;32m     12\u001b[0m         param \u001b[38;5;241m=\u001b[39m gate1[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m---> 13\u001b[0m         gate_data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m, gate1[\u001b[38;5;241m2\u001b[39m][\u001b[38;5;241m0\u001b[39m], \u001b[43mgate\u001b[49m\u001b[43m[\u001b[49m\u001b[43mgate1\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m(param)[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m], gate[gate1[\u001b[38;5;241m0\u001b[39m]](param)[\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m1\u001b[39m]]\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m gate1[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRX\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRY\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mH\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;66;03m# Dense\u001b[39;00m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m gate1[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRX\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRY\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n",
+      "\u001b[1;31mTypeError\u001b[0m: tuple indices must be integers or slices, not str"
      ]
     }
    ],
@@ -127,12 +190,250 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Subcircuit 1 ---\n",
+      "     ┌─────────┐\n",
+      "q_0: ┤ Rz(0.3) ├\n",
+      "     └─────────┘\n",
+      "q_1: ───────────\n",
+      "        ┌───┐   \n",
+      "q_2: ───┤ H ├───\n",
+      "        └───┘   \n",
+      "\n",
+      "--- Subcircuit 2 ---\n",
+      "                \n",
+      "q_0: ───────────\n",
+      "     ┌─────────┐\n",
+      "q_1: ┤ Rz(0.4) ├\n",
+      "     └─────────┘\n",
+      "q_2: ───────────\n",
+      "                \n",
+      "\n",
+      "--- Subcircuit 3 ---\n",
+      "          \n",
+      "q_0: ──■──\n",
+      "     ┌─┴─┐\n",
+      "q_1: ┤ X ├\n",
+      "     └───┘\n",
+      "q_2: ─────\n",
+      "          \n",
+      "\n",
+      "--- Subcircuit 4 ---\n",
+      "          \n",
+      "q_0: ─────\n",
+      "          \n",
+      "q_1: ─────\n",
+      "     ┌───┐\n",
+      "q_2: ┤ H ├\n",
+      "     └───┘\n",
+      "\n",
+      "--- Subcircuit 5 ---\n",
+      "        ┌───┐   \n",
+      "q_0: ───┤ H ├───\n",
+      "     ┌──┴───┴──┐\n",
+      "q_1: ┤ Rx(0.5) ├\n",
+      "     └──┬───┬──┘\n",
+      "q_2: ───┤ H ├───\n",
+      "        └───┘   \n",
+      "\n",
+      "--- Subcircuit 6 ---\n",
+      "          \n",
+      "q_0: ──■──\n",
+      "     ┌─┴─┐\n",
+      "q_1: ┤ X ├\n",
+      "     └───┘\n",
+      "q_2: ─────\n",
+      "          \n",
+      "\n",
+      "--- Subcircuit 7 ---\n",
+      "     ┌─────────┐\n",
+      "q_0: ┤ Rz(0.5) ├\n",
+      "     └─────────┘\n",
+      "q_1: ───────────\n",
+      "                \n",
+      "q_2: ───────────\n",
+      "                \n"
+     ]
+    }
+   ],
+   "source": [
+    "from qiskit import QuantumCircuit, transpile\n",
+    "from qiskit.converters import circuit_to_dag\n",
+    "\n",
+    "def qc_to_qcs(qc):\n",
+    "\tdef split_layer_into_subcircuits(layer_ops, num_qubits):\n",
+    "\t\t\"\"\"\n",
+    "\t\tGiven a list of DAG operations (from one layer), split them into \n",
+    "\t\tdepth-1 QuantumCircuits such that each circuit satisfies:\n",
+    "\t\t- It contains at most one one-qubit rotation gate (rx, ry, or rz)\n",
+    "\t\t\tpossibly combined with other one-qubit (non-parameterized) gates,\n",
+    "\t\t\tOR\n",
+    "\t\t- It contains a single two-qubit gate (e.g. a cx gate).\n",
+    "\t\t\n",
+    "\t\tParameters:\n",
+    "\t\tlayer_ops: list of DAGOpNode objects from one layer.\n",
+    "\t\tnum_qubits: number of qubits in the original circuit.\n",
+    "\t\t\n",
+    "\t\tReturns:\n",
+    "\t\tA list of QuantumCircuit objects (each depth-1 and meeting the constraints).\n",
+    "\t\t\"\"\"\n",
+    "\t\tsubcircuits = []\n",
+    "\t\t\n",
+    "\t\t# ----- 1. Handle multi-qubit gates (e.g. cx) -----\n",
+    "\t\t# Each two-qubit gate (or in general, any gate acting on >1 qubit)\n",
+    "\t\t# must be isolated.\n",
+    "\t\tfor op in layer_ops:\n",
+    "\t\t\tif len(op.qargs) > 1:\n",
+    "\t\t\t\tqc_temp = QuantumCircuit(num_qubits)\n",
+    "\t\t\t\tqc_temp.append(op.op, op.qargs, op.cargs)\n",
+    "\t\t\t\tsubcircuits.append(qc_temp)\n",
+    "\t\t\n",
+    "\t\t# ----- 2. Handle one-qubit gates -----\n",
+    "\t\tone_qubit_ops = [op for op in layer_ops if len(op.qargs) == 1]\n",
+    "\t\trotation_names = ['rx', 'ry', 'rz']\n",
+    "\t\t\n",
+    "\t\t# Partition one-qubit ops into rotation and non-rotation gates.\n",
+    "\t\trotation_ops = []\n",
+    "\t\tnon_rotation_ops = []\n",
+    "\t\tfor op in one_qubit_ops:\n",
+    "\t\t\tif op.op.name in rotation_names:\n",
+    "\t\t\t\trotation_ops.append(op)\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tnon_rotation_ops.append(op)\n",
+    "\t\t\n",
+    "\t\t# We want to group one-qubit ops so that each resulting circuit \n",
+    "\t\t# has at most one rotation.\n",
+    "\t\t# Here’s one simple strategy:\n",
+    "\t\t#   (a) For each rotation gate, create a circuit that includes that rotation.\n",
+    "\t\t#       (Optionally, add any non-rotation gates that act on different qubits.)\n",
+    "\t\t#   (b) Then, combine any leftover non-rotation gates into a single circuit.\n",
+    "\t\t\n",
+    "\t\t# (a) Process each rotation op:\n",
+    "\t\tused_non_rotation = set()  # to mark non-rotation ops we assign along with a rotation\n",
+    "\t\t\n",
+    "\t\tfor rot in rotation_ops:\n",
+    "\t\t\tqc_temp = QuantumCircuit(num_qubits)\n",
+    "\t\t\tqc_temp.append(rot.op, rot.qargs, rot.cargs)\n",
+    "\t\t\t# Add any non-rotation op that is on a different qubit than the rotation.\n",
+    "\t\t\t# (In a DAG layer, these should be disjoint—but we check just in case.)\n",
+    "\t\t\tfor i, op in enumerate(non_rotation_ops):\n",
+    "\t\t\t\tif i not in used_non_rotation:\n",
+    "\t\t\t\t\tif op.qargs[0] != rot.qargs[0]:\n",
+    "\t\t\t\t\t\tqc_temp.append(op.op, op.qargs, op.cargs)\n",
+    "\t\t\t\t\t\tused_non_rotation.add(i)\n",
+    "\t\t\tsubcircuits.append(qc_temp)\n",
+    "\t\t\n",
+    "\t\t# (b) For any remaining non-rotation ops not merged above, \n",
+    "\t\t# group them together in one circuit.\n",
+    "\t\tremaining_non_rotation = [op for i, op in enumerate(non_rotation_ops) if i not in used_non_rotation]\n",
+    "\t\tif remaining_non_rotation:\n",
+    "\t\t\tqc_temp = QuantumCircuit(num_qubits)\n",
+    "\t\t\tfor op in remaining_non_rotation:\n",
+    "\t\t\t\tqc_temp.append(op.op, op.qargs, op.cargs)\n",
+    "\t\t\tsubcircuits.append(qc_temp)\n",
+    "\t\t\n",
+    "\t\treturn subcircuits\n",
+    "\n",
+    "\n",
+    "\t# Convert the circuit to a DAG and extract its layers.\n",
+    "\tdag = circuit_to_dag(qc)\n",
+    "\tlayers = list(dag.layers())\n",
+    "\n",
+    "\tqcs = []\n",
+    "\tfor layer in layers:\n",
+    "\t\t# layer['graph'].op_nodes() returns the operations in that layer.\n",
+    "\t\tlayer_ops = list(layer['graph'].op_nodes())\n",
+    "\t\tsubcirs = split_layer_into_subcircuits(layer_ops, qc.num_qubits)\n",
+    "\t\tqcs.extend(subcirs)\n",
+    "\treturn qcs\n",
+    "\n",
+    "qcs = qc_to_qcs(qc)\n",
+    "for idx, circ in enumerate(qcs):\n",
+    "    print(f\"\\n--- Subcircuit {idx+1} ---\")\n",
+    "    print(circ.draw())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rz\n",
+      "[0.3]\n",
+      "(Qubit(QuantumRegister(3, 'q'), 0),)\n",
+      "h\n",
+      "[]\n",
+      "(Qubit(QuantumRegister(3, 'q'), 2),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for gate in qcs[0].data:\n",
+    "    print(gate.name)\n",
+    "    print(gate.params)\n",
+    "    print(gate.qubits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\haime\\AppData\\Local\\Temp\\ipykernel_2336\\3434704346.py:3: DeprecationWarning: Treating CircuitInstruction as an iterable is deprecated legacy behavior since Qiskit 1.2, and will be removed in Qiskit 2.0. Instead, use the `operation`, `qubits` and `clbits` named attributes.\n",
+      "  for instr, qargs, _ in circuit.data:\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'indices'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[94], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m circuit_list\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Extract the circuit information\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m circuit_info \u001b[38;5;241m=\u001b[39m \u001b[43mextract_circuit_info\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqcs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m info \u001b[38;5;129;01min\u001b[39;00m circuit_info:\n\u001b[0;32m     14\u001b[0m \t\u001b[38;5;28mprint\u001b[39m(info)\n",
+      "Cell \u001b[1;32mIn[94], line 6\u001b[0m, in \u001b[0;36mextract_circuit_info\u001b[1;34m(circuit)\u001b[0m\n\u001b[0;32m      4\u001b[0m gate \u001b[38;5;241m=\u001b[39m instr\u001b[38;5;241m.\u001b[39mname\n\u001b[0;32m      5\u001b[0m parameters \u001b[38;5;241m=\u001b[39m instr\u001b[38;5;241m.\u001b[39mparams  \u001b[38;5;66;03m# list of parameters (if any)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mqargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindices\u001b[49m)\n\u001b[0;32m      7\u001b[0m wires \u001b[38;5;241m=\u001b[39m [qubit \u001b[38;5;28;01mfor\u001b[39;00m qubit \u001b[38;5;129;01min\u001b[39;00m qargs]\n\u001b[0;32m      8\u001b[0m circuit_list\u001b[38;5;241m.\u001b[39mappend((gate, parameters, wires))\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'indices'"
+     ]
+    }
+   ],
+   "source": [
+    "def extract_circuit_info(circuit):\n",
+    "    circuit_list = []\n",
+    "    for instr, qargs, _ in circuit.data:\n",
+    "        gate = instr.name\n",
+    "        parameters = instr.params  # list of parameters (if any)\n",
+    "        print(qargs.)\n",
+    "        wires = [qubit for qubit in qargs]\n",
+    "        circuit_list.append((gate, parameters, wires))\n",
+    "    return circuit_list\n",
+    "\n",
+    "# Extract the circuit information\n",
+    "circuit_info = extract_circuit_info(qcs[0])\n",
+    "for info in circuit_info:\n",
+    "\tprint(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "lst = [1, 1]lst = [1, 1]lst = [1, 1]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -151,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
