--- a/generate_file_for_hardware_only_1gateinU.ipynb
+++ b/generate_file_for_hardware_only_1gateinU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -10,14 +10,7 @@
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "[('RZ', 0.3, [0]), ['I', -999, [1]], ('H', -999, [2])]\n",
-      "[['I', -999, [0]], ('RZ', 0.4, [1]), ['I', -999, [2]]]\n",
-      "[('CX', -999, [0, 1]), 0, 0]\n",
-      "[['I', -999, [0]], ['I', -999, [1]], ('H', -999, [2])]\n",
-      "[('H', -999, [0]), ('RX', 0.5, [1]), ('H', -999, [2])]\n",
-      "[('CX', -999, [0, 1]), 0, 0]\n",
-      "[('RZ', 0.5, [0]), ['I', -999, [1]], ['I', -999, [2]]]\n"
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -26,8 +19,9 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import qiskit\n",
     "\n",
+    "import qiskit\n",
+    "from qimax import converter, constant\n",
     "num_qubits = 3\n",
     "qc = qiskit.QuantumCircuit(num_qubits)\n",
     "qc.rz(0.3, 0)\n",
@@ -42,18 +36,33 @@
     "qc.h(2)\n",
     "from qimax import converter, circuit, splitter\n",
     "\n",
+    "texts = []\n",
+    "texts.append(len(qc.data))\n",
+    "for gate in qc.data:\n",
+    "    name = gate.name.upper()\n",
+    "    params = None\n",
+    "    wires = converter.get_wires_of_gate(gate)\n",
+    "    if name == 'CX':\n",
+    "        type = 2\n",
+    "    else:\n",
+    "        type = 1\n",
+    "        gate_entries = constant.constant_gate[name]\n",
+    "        if name in ['RX', 'RY', 'RZ']:\n",
+    "            params = gate.params[0]\n",
+    "            gate_entries = gate_entries(params)\n",
+    "    texts.append(type)\n",
+    "    if type == 2:\n",
+    "        texts.append(wires[0])\n",
+    "        texts.append(wires[1])\n",
+    "    else:\n",
+    "        texts.append(wires[0])\n",
+    "        texts.append(gate_entries[0][0])\n",
+    "        texts.append(gate_entries[0][1])\n",
+    "        texts.append(gate_entries[1][0])\n",
+    "        texts.append(gate_entries[1][1])\n",
     "\n",
-    "qcs = splitter.qc_to_qcs(qc)\n",
-    "gatess = converter.qcs_to_gatess(qcs)\n",
-    "gatess_with_I = converter.gatess_to_gatess_with_I(gatess, num_qubits)\n",
-    "\n",
-    "for u in gatess_with_I:\n",
-    "    print(u)\n",
-    "\n",
-    "# CONVERT QISKIT CIRCUIT TO STR\n",
-    "strs = converter.gatess_to_str(gatess_with_I) \n",
     "with open('output.txt', 'w') as f:\n",
-    "    for item in strs:\n",
+    "    for item in texts:\n",
     "        f.write(\"%s\\n\" % item)"
    ]
   },
