--- a/benchmark_for_duypaper.ipynb
+++ b/benchmark_for_duypaper.ipynb
@@ -26,18 +26,20 @@
     "# Benchmark from quanvolutional1 to quanvolutional19\n",
     "\n",
     "num_qubits = 3\n",
-    "qc = qiskit.QuantumCircuit(num_qubits)\n",
-    "qc = ansatz.quanvolutional19(qc)\n",
+    "qc = qiskit.QuantumCircuit(num_qubits) \n",
+    "qc = ansatz.quanvolutional19(qc) # replace function from ansatz.py\n",
     "qc = qiskit.transpile(qc, basis_gates=['h', 's', 'cx', 'rx', 'ry', 'rz'], optimization_level=3)\n",
     "qc.draw(output='mpl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert to readable files\n",
+    "\n",
     "from qimax import converter, constant\n",
     "\n",
     "texts = []\n",
@@ -97,6 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculate error\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "def fidelity(state1: np.ndarray, state2: np.ndarray):\n",
@@ -104,9 +108,11 @@
     "    state2 = np.expand_dims(state2, axis=0)\n",
     "    return (np.abs(np.inner(np.conjugate(state1), state2))**2)[0][0]\n",
     "\n",
+    "\n",
     "def mse(state1: np.ndarray, state2: np.ndarray):\n",
     "    return np.mean(np.abs(state1 - state2)**2)\n",
     "\n",
+    "qc_fpga = ?\n",
     "print(fidelity(qc_qiskit, qc_fpga))\n",
     "print(mse(qc_qiskit, qc_fpga))"
    ]
